syntax = "proto3";

package com.example.internalapi.request.book.get_by_title_and_author.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/book.proto";
import "com/example/internalapi/model/error/error.proto";

message GetBookByTitleAndAuthorRequest {
  string title = 1;
  string author_id = 2;
}

message GetBookByTitleAndAuthorResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    example.internalapi.model.BookList books = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      example.internalapi.model.Error not_found_error = 1;
      example.internalapi.model.Error illegal_argument_expression = 2;
      example.internalapi.model.Error unknown_error = 3;
    }}
}
